packages/ui-webc/src/components/app-bar/app-bar.css
:host {
  display: flex;
  width: 100%;
}

::slotted(scout-button) {
  /* biome-ignore lint/complexity/noImportantStyles: This is a cheeky override, so we're good with it */
  height: 100% !important;
}

.prefix.has-content {
  margin-left: calc(var(--spacing-3) * -1);
}
.suffix.has-content {
  margin-right: calc(var(--spacing-3) * -1);
}

.container {
  display: flex;
  flex: 1;
  height: var(--spacing-16);
  background-color: var(--color-white);
  color: var(--color-text-brand-base);
  padding: var(--spacing-1) var(--spacing-4);
  /* TODO: We don't have tokens for shadows yet */
  box-shadow:
    0 1px 0 var(--color-gray-100),
    0 4px 18px -6px rgba(0, 22, 45, 0.08);
  border-bottom: 2px solid var(--color-blue-700);
}

.title {
  flex: 1;
  display: flex;
  align-items: center;
  font-family: var(--fontfamily-sans);
  font-size: 1.25rem;
  font-weight: 700;
  padding: 0 var(--spacing-1);
}

